--- a/style.css
+++ b/style.css
@@ -3,9 +3,15 @@
     font-family: "Josefin Sans", sans-serif;
 }
 
+ul {
+    padding: 0;
+    list-style-type: none;
+  }
+
 nav {
     height: 100px;
     width: 100%;
+    margin-bottom: 30px;
     position: relative;
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 
             url('https://images.unsplash.com/photo-1597773150796-e5c14ebecbf5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGFyayUyMGJsdWV8ZW58MHx8MHx8fDA%3D');
@@ -32,4 +38,61 @@ nav {
     height: 70px;
 }
 
+.products-container {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 
+  .product-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    height: 440px;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  .product-item > img {
+    height: 200px;
+    width: 200px;
+    object-fit: contain;
+    padding-bottom: 10px;
+  }
+
+  .product-item > p {
+    text-align: left;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 5; /* number of lines to show */
+    -webkit-box-orient: vertical;
+  }
+
+  .product-price-section {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: auto;
+  }
+
+  .product-price-section > span {
+    font-weight: bold;
+  }
+
+  .product-price-section > button {
+    padding: 10px;
+    border: none;
+    background-color: rgb(13, 13, 173);
+    cursor: pointer;
+    color: #fff;
+    border-radius: 5px;
+    transition: 0.3s;
+  }
+
+  .product-price-section > button:hover {
+    background-color: rgb(67, 107, 239);
+  }
