--- a/style.css
+++ b/style.css
@@ -6,15 +6,21 @@
 ul {
     padding: 0;
     list-style-type: none;
-  }
+}
 
+a {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+/* style nav */
 nav {
     height: 100px;
     width: 100%;
     margin-bottom: 30px;
     position: relative;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 
-            url('https://images.unsplash.com/photo-1597773150796-e5c14ebecbf5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGFyayUyMGJsdWV8ZW58MHx8MHx8fDA%3D');
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
+            url('https://images.unsplash.com/photo-1633259584604-afdc243122ea?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGRhcmslMjBibHVlJTIwYmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D');
             background-size: cover; 
             background-position: center; 
             background-repeat: no-repeat;
@@ -23,28 +29,51 @@ nav {
 .nav-title {
     height: 100%;
     display: flex;
-    justify-content: center;
+    padding-left: 25%;
     align-items: center;
     font-size: 50px;
+    font-weight:500;
     color: white;
     margin: 0;
 }
 
-.nav-icon {
+.nav-link {
     position: absolute;
+    z-index: 10;
+    text-transform: uppercase;
     top: 50%;
     transform: translateY(-50%);
-    right: 10px;
-    height: 70px;
+    color: white;
+    font-size: 15px;
+    font-weight: 400;
+    letter-spacing: 1.5px;
 }
 
+.nav-about {
+    right: 13%;
+}
+
+.nav-contacts {  
+    right: 6%;
+}
+
+.nav-icon {
+    position: absolute;
+    cursor: pointer;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 1%;
+    height: 55px;
+}
+
+/* style products */
 .products-container {
     width: 90%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-  }
+}
 
   .product-item {
     display: flex;
@@ -54,22 +83,22 @@ nav {
     height: 440px;
     text-align: center;
     margin-bottom: 30px;
-  }
+}
 
   .product-item > img {
     height: 200px;
     width: 200px;
     object-fit: contain;
     padding-bottom: 10px;
-  }
+}
 
   .product-item > p {
     text-align: left;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 5; /* number of lines to show */
+    -webkit-line-clamp: 5; 
     -webkit-box-orient: vertical;
-  }
+}
 
   .product-price-section {
     width: 100%;
@@ -77,22 +106,22 @@ nav {
     justify-content: space-between;
     align-items: center;
     margin-top: auto;
-  }
+}
 
   .product-price-section > span {
     font-weight: bold;
-  }
+}
 
   .product-price-section > button {
     padding: 10px;
     border: none;
-    background-color: rgb(13, 13, 173);
+    background-color: rgb(36, 54, 103);
     cursor: pointer;
     color: #fff;
     border-radius: 5px;
     transition: 0.3s;
-  }
+}
 
   .product-price-section > button:hover {
-    background-color: rgb(67, 107, 239);
-  }
+    background-color: rgb(50, 88, 145);
+}
