--- a/style.css
+++ b/style.css
@@ -125,3 +125,116 @@ nav {
   .product-price-section > button:hover {
     background-color: rgb(50, 88, 145);
 }
+
+/* cart */
+.cart {
+  text-align: center;
+}
+
+.cart h2 {
+  background-color: rgb(68, 116, 190);
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cart p {
+  font-size: 20px;
+  padding: 15px 0;
+}
+
+.cart-list-wrapper {
+  padding-top: 10px;
+  display: none;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.cart-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.cart-list-item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.cart-list-titles {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart-list-titles > h4 {
+  padding-bottom: 10px;
+  border-bottom: 2px solid black;
+}
+
+.cart-list-item-section {
+  display: flex;
+  align-items: center;
+}
+
+.cart-list-item-title,
+.cart-list-quantity-title,
+.cart-list-img-section,
+.cart-list-quantity-section {
+  width: 30%;
+}
+
+.cart-list-price-title,
+.cart-list-price-section {
+  width: 20%;
+}
+
+.cart-list-quantity-section {
+  justify-content: space-between;
+}
+
+.cart-list-quantity-section > button {
+  padding: 10px;
+  border: none;
+  background-color: red;
+  cursor: pointer;
+  color: #fff;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.cart-list-img-section > img {
+  height: 100px;
+  width: 100px;
+  object-fit: contain;
+}
+
+.cart-list-img-section > h4 {
+  margin-left: 10px;
+  font-weight: normal;
+}
+
+.cart-list-price-section {
+  font-weight: bold;
+}
+
+.cart-list-quantity-section > input {
+  width: 50px;
+  padding: 5px 0;
+  text-indent: 5px;
+}
+
+.cart-list-quantity-section > button:hover {
+  background-color: #bd0404;
+}
+
+.total-amount {
+  text-align: right;
+  font-weight: normal;
+}
+
+.total-amount > span {
+  margin-left: 10px;
+  font-weight: bold;
+}
